--- a/app/src/PassScanner/res/layout/activity_menu.xml
+++ b/app/src/PassScanner/res/layout/activity_menu.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     tools:context="org.covid19india.android.safepassageindia.passscanner.MenuActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <View
             android:id="@+id/divider1"
             android:layout_width="match_parent"
@@ -16,20 +17,40 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:background="@color/divider" />
+
         <TextView
             android:id="@+id/welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:padding="10dp"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:layout_alignParentStart="true"/>
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/scan_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/scan_background"
+            android:drawableStart="@drawable/scan_64px"
+            android:elevation="3dp"
+            android:fontFamily="serif-monospace"
+            android:padding="20dp"
+            android:text="@string/scan"
+            android:textColor="@android:color/white"
+            android:textSize="40sp"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/sign_out"
             android:layout_width="wrap_content"
+            android:background="@drawable/scan_background"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:text="Sign Out"/>
+            android:text="@string/sign_out" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
