--- a/app/src/PassScanner/res/layout/activity_scanner.xml
+++ b/app/src/PassScanner/res/layout/activity_scanner.xml
@@ -15,6 +15,8 @@
             android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_alignParentTop="true"
             android:orientation="horizontal">
 
