--- a/app/src/PassScanner/res/layout/activity_scanner.xml
+++ b/app/src/PassScanner/res/layout/activity_scanner.xml
@@ -15,10 +15,10 @@
             android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
             android:layout_alignParentTop="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp">
 
             <EditText
                 android:id="@+id/phone_edit"
