--- a/app/src/PassScanner/res/layout/activity_result.xml
+++ b/app/src/PassScanner/res/layout/activity_result.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp" />
+        <!--
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
@@ -21,7 +26,6 @@
             app:cardCornerRadius="3dp"
             app:cardUseCompatPadding="true"
             app:contentPadding="20dp">
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -56,7 +60,6 @@
                     android:textSize="20sp" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
-
         <RelativeLayout
             android:id="@+id/content_relative"
             android:layout_width="match_parent"
@@ -65,14 +68,6 @@
             android:layout_margin="10dp"
             android:background="@drawable/number_border"
             android:padding="10dp">
-
-            <TextView
-                android:id="@+id/content_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Hello\nMy\nname\nis"
-                android:textColor="@android:color/white" />
 
             <ImageView
                 android:id="@+id/verified_image"
@@ -98,5 +93,6 @@
             android:layout_centerHorizontal="true"
             android:text="Document"
             android:textColor="@android:color/white" />
+            -->
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
