--- a/app/src/main/res/layout/item_pass_list.xml
+++ b/app/src/main/res/layout/item_pass_list.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:elevation="10dp"
         app:cardCornerRadius="2dp"
         app:cardBackgroundColor="@color/colorPrimaryDark"
@@ -23,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:background="@android:color/transparent"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/img" />
 
             <TextView
                 android:id="@+id/title1"
