--- a/app/src/main/res/layout/item_pass_list.xml
+++ b/app/src/main/res/layout/item_pass_list.xml
@@ -7,6 +7,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:elevation="10dp"
+        app:cardElevation="10dp"
         app:cardCornerRadius="2dp"
         app:cardBackgroundColor="@color/colorPrimaryDark"
         app:contentPadding="15dp"
