Updated Menu Activity (Issuer)
Signed-off-by: Goutham <gouthams0922@gmail.com>

--- a/app/src/PassIssuer/res/layout/fragment_passes.xml
+++ b/app/src/PassIssuer/res/layout/fragment_passes.xml
@@ -5,10 +5,21 @@
     android:layout_height="match_parent"
     tools:context="org.covid19india.android.safepassageindia.passissuer.fragment.PassesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btn_new_pass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="25dp"
+            android:background="@drawable/blue_button"
+            android:text="@string/new_pass"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
 </FrameLayout>
