--- a/app/src/main/res/layout/item_pass_list.xml
+++ b/app/src/main/res/layout/item_pass_list.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
-        android:elevation="10dp"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="2dp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
-        app:contentPadding="15dp"
-        app:cardUseCompatPadding="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:elevation="10dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="10dp"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="15dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,8 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:background="@android:color/transparent"
-                android:src="@drawable/img" />
+                android:background="@android:color/transparent" />
 
             <TextView
                 android:id="@+id/title1"
@@ -33,7 +32,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@id/user_pic"
-                android:text="Name"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
 
@@ -44,7 +42,6 @@
                 android:layout_below="@id/title1"
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@id/user_pic"
-                android:text="Phone Number"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
         </RelativeLayout>
