--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#283949</color>
     <color name="colorPrimaryDark">#243442</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBackground">#2c3e50</color>
     <color name="divider">#567C9E</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">
+        @android:color/darker_gray
+    </color>
 </resources>
