--- a/app/src/PassIssuer/res/layout/content_date_time_picker.xml
+++ b/app/src/PassIssuer/res/layout/content_date_time_picker.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginBottom="10dp"
     android:orientation="horizontal">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -10,6 +14,7 @@
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
         android:layout_weight="1"
         android:textColorHint="@android:color/darker_gray"
         app:boxStrokeColor="@android:color/white"
@@ -34,6 +39,7 @@
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         android:layout_weight="1"
         android:textColorHint="@android:color/darker_gray"
         app:boxStrokeColor="@android:color/white"
