--- a/app/src/PassScanner/res/layout/activity_menu.xml
+++ b/app/src/PassScanner/res/layout/activity_menu.xml
@@ -7,8 +7,16 @@
     tools:context="org.covid19india.android.safepassageindia.passscanner.activity.MenuActivity">
 
     <RelativeLayout
+        android:id="@+id/parent_relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/menu_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
         <View
             android:id="@+id/divider1"
