--- a/app/src/PassIssuer/res/layout/fragment_pass_form.xml
+++ b/app/src/PassIssuer/res/layout/fragment_pass_form.xml
@@ -54,7 +54,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/til_name"
+                    android:id="@+id/til_verification"
                     style="@style/EditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -67,10 +67,10 @@
                     app:hintTextColor="@android:color/white">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/nameEdit"
+                        android:id="@+id/verificationEdit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name"
+                        android:hint="Medical Verification"
                         android:inputType="textCapWords"
                         android:textColor="@android:color/white"
                         android:textCursorDrawable="@null" />
@@ -84,7 +84,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/spinner_border">
-
+                    <!-- Pass Type -->
                     <Spinner
                         android:id="@+id/spinner"
                         android:layout_width="match_parent"
@@ -92,6 +92,29 @@
                         android:backgroundTint="@android:color/white"
                         android:padding="10dp" />
                 </RelativeLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_reason"
+                    style="@style/EditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:textColorHint="@android:color/darker_gray"
+                    app:boxStrokeColor="@android:color/white"
+                    app:hintTextColor="@android:color/white">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/reasonEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Reason"
+                        android:inputType="text|textCapSentences"
+                        android:textColor="@android:color/white"
+                        android:textCursorDrawable="@null" />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -123,7 +146,7 @@
                     android:id="@+id/till_layout"
                     layout="@layout/content_date_time_picker" />
 
-                <com.google.android.material.textfield.TextInputLayout
+                <!--<com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_vehicle"
                     style="@style/EditTextStyle"
                     android:layout_width="match_parent"
@@ -144,7 +167,7 @@
                         android:inputType="textCapCharacters"
                         android:textColor="@android:color/white"
                         android:textCursorDrawable="@null" />
-                </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>-->
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_people"
@@ -165,29 +188,6 @@
                         android:layout_height="wrap_content"
                         android:hint="People"
                         android:inputType="number"
-                        android:textColor="@android:color/white"
-                        android:textCursorDrawable="@null" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/til_remarks"
-                    style="@style/EditTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:textColorHint="@android:color/darker_gray"
-                    app:boxStrokeColor="@android:color/white"
-                    app:hintTextColor="@android:color/white">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/remarksEdit"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Remarks"
-                        android:inputType="text|textCapSentences"
                         android:textColor="@android:color/white"
                         android:textCursorDrawable="@null" />
                 </com.google.android.material.textfield.TextInputLayout>
