--- a/app/src/PassIssuer/res/layout/fragment_new_user_form.xml
+++ b/app/src/PassIssuer/res/layout/fragment_new_user_form.xml
@@ -165,13 +165,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/blue_button"
+            android:layout_margin="25dp"
             android:text="Create"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:background="@drawable/blue_button"
+            app:backgroundTint="@android:color/holo_blue_light" />
     </RelativeLayout>
 </FrameLayout>
