--- a/app/src/PassIssuer/res/values/styles.xml
+++ b/app/src/PassIssuer/res/values/styles.xml
@@ -8,6 +8,11 @@
 
     <style name="EditTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" />
 
+    <style name="AlertDialogStyle" parent="Theme.MaterialComponents.Light.Dialog">
+
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
